# IParameter

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  externals.txt  likeExternals.py  removeExternals.py  verifyExternals.py
doc/: configuration_parameters.tex
src/: CMakeLists.txt  version.h
src/Util/: LogosLisaObservable.cpp  ObserverHelper.cpp  StringHelper.cpp  StringUtil.cpp
src/include/IParameter/: IParameter.h  IParameterObservable.h  IParameterRef.h
src/include/IParameter/Util/: IParameterLisa2.h  LogosLisaObservable.h  ObserverHelper.h  StringHelper.h  StringUtil.h
tests/: CMakeLists.txt  ParameterTest.cpp  build.bat
